--- a/styles/contact.css
+++ b/styles/contact.css
@@ -42,13 +42,19 @@ input {display: block;}
 textarea{width: 350px; }
 
 #nav-items{
-
-color: bisque;
+    font-family: Arial, Helvetica, sans-serif;
+margin-top: 130px;
+color: #d9d9d9;
 width:100%;
 display: flex;
-justify-content: space-around;
+gap: 50px;
 font-size: 18px;
 }
+
+#nav-items a {color: aliceblue;text-decoration: none;}
+
+#nav-items a:hover{text-decoration: underline;}
+
 
 main {
     background-color: aquamarine;
